zowel HTML als javascript aangepast

--- a/HTML.html
+++ b/HTML.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>hallo hallo</title>
+    <title>hallo hallo!</title>
 </head>
 <body>
 :q
